src/test/ui/directory_ownership/macro-expanded-mod.stderr
error: Cannot declare a non-inline module inside a block unless it has a path attribute
  --> $DIR/macro-expanded-mod.rs:22:15
   |
LL |     mod_decl!(foo); //~ ERROR Cannot declare a non-inline module inside a block
   |               ^^^

error: aborting due to previous error

